# akcp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README_zh.md  THIRD_PARTY_NOTICES
.cache/clangd/index/: address.cc.33CEA2D1807DBF2C.idx  address.hh.3EECAEFEA4E27135.idx  channel.cc.D9CAFE9D8D17A5A3.idx  channel.hh.58B45D5478ACC458.idx  channel_container.cc.6E24FE1369767F6C.idx  channel_container.hh.ADFC3457B2F61EAA.idx  channel_manager.cc.BAF6F9EA084B5E50.idx  channel_manager.hh.A7116658C05D9BDA.idx  client.cc.1662652C629D250C.idx  client.cc.33A79B36389107E4.idx  client.cc.95458A934CA26A52.idx  client.cc.D2C99FA80A60A1B3.idx  client.hh.89C8BEA13C8C4023.idx  common.hh.51115332A0E98A13.idx  connection.cc.899A20EA6343A0C8.idx  connection.hh.5B8605F91EFBB3A0.idx  connection_number.cc.DCDB696D48F778F7.idx  context.cc.BE395FAFE23D633E.idx  context.hh.94DA8E4F693D1C27.idx  data_size.cc.C4E0C5DEEFF0D791.idx  ikcp.c.5CB0CDA48397E16D.idx  ikcp.h.6BB9842E8D28514C.idx  io_loop.cc.6FD87E1F61B96820.idx  io_loop.hh.1DA2442229E8AC05.idx  io_socket.cc.8ACD5FA88DED0332.idx  io_socket.hh.E5A1886B12D4EB3B.idx  kcp_thread.cc.10472D2A2D3AA96C.idx  kcp_thread.hh.174750E519ABF74D.idx  lfree.hh.CB3FA1955C747735.idx  number.cc.62927F2A5B1F2487.idx  number.hh.449BD6E07006D37B.idx  protocol.cc.96FFF3E7C6BE49EA.idx  protocol.hh.749B2B2B5AACC6F1.idx  rate_diff.cc.40BF0F25DCA82A8A.idx  server.cc.3D42389334BB4C6F.idx  server.cc.A0C9C578961D1E18.idx  server.cc.C5BD095E936C5D8B.idx  server.cc.CE24453E0F67B776.idx  server.cc.D5EB13532536196D.idx  server.hh.8F25A2C1F5D3F0D1.idx  (+8 more)
cmake/: akcpConfig.cmake.in
common/: CMakeLists.txt  address.cc  address.hh  common.hh  lfree.hh  protocol.cc  protocol.hh  time.cc  timer.cc
csharp/: akcp.cs  client.cs  server.cs
resource/: CMakeLists.txt  address.cc  channel.cc  channel.hh  channel_container.cc  channel_container.hh  channel_manager.cc  channel_manager.hh  client.cc  client.hh  common.hh  connection.cc  connection.hh  context.cc  context.hh  io_loop.cc  io_loop.hh  io_socket.cc  io_socket.hh  kcp_thread.cc  kcp_thread.hh  kcp_timer.cc  number.cc  packet.cc  protocol.cc  server.cc  server.hh  timer.cc  timer.hh  timer_tasks.cc  timer_tasks.hh
test/: CMakeLists.txt  client.cc  server.cc  test.sh  test_timer.cc
test/balance/: CMakeLists.txt  buffer_pool.hh  client.cc  server.cc
test/multi_thread/: CMakeLists.txt  client.cc  server.cc  test.sh
test/pps_bps_p99/: CMakeLists.txt  buffer_pool.hh  client.cc  server.cc
test/result/: cleaned_performance.csv  disable_low_delay.csv  enable_low_delay.csv  result.json
test/result/script/: mem_cpu_topng.py  ppstopng.py
test/single_demo/: CMakeLists.txt  client.cc  server.cc
test/stress_test/: CMakeLists.txt  buffer_pool.hh  client.cc  connection_number.cc  server.cc  server_status.py
