

file(GLOB RESOURCE_SRC CONFIGURE_DEPENDS
    "${CMAKE_CURRENT_SOURCE_DIR}/*.cc"
)

add_library(akcp STATIC ${RESOURCE_SRC} $<TARGET_OBJECTS:kcp_common>)

target_link_libraries(akcp PUBLIC Boost::system Boost::asio)

target_include_directories(akcp PUBLIC
    $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/resource>
    $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/common>
    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/akcp>
)

install(TARGETS akcp
    EXPORT akcpTargets
    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)

install(DIRECTORY ${PROJECT_SOURCE_DIR}/resource/
    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/akcp
    FILES_MATCHING PATTERN "*.hh"
)

install(DIRECTORY ${PROJECT_SOURCE_DIR}/common/
    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/akcp
    FILES_MATCHING PATTERN "*.hh" PATTERN "*.h"
)
