file(GLOB RESOURCE_SRC CONFIGURE_DEPENDS
    "${CMAKE_CURRENT_SOURCE_DIR}/*.cc"
    "${CMAKE_CURRENT_SOURCE_DIR}/*.c"
)

add_library(akcp STATIC ${RESOURCE_SRC})

target_link_libraries(akcp PUBLIC ${Boost_LIBRARIES})

target_include_directories(akcp PUBLIC
    $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/resource>
    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/akcp>
)

install(TARGETS akcp
    EXPORT akcpTargets
    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)

install(DIRECTORY ${PROJECT_SOURCE_DIR}/resource/
    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/akcp
    FILES_MATCHING PATTERN "*.hh"
)